Fix baseline alignment

--- a/src/components/SearchFilters/SearchFilters.css
+++ b/src/components/SearchFilters/SearchFilters.css
@@ -9,7 +9,7 @@
 .searchResultSummary {
   @apply --marketplaceH4FontStyles;
   line-height: 20px;
-  margin-top: 10px;
+  margin-top: 9px;
 
   display: none;
 
