--- a/src/containers/SearchPage/SearchPage.css
+++ b/src/containers/SearchPage/SearchPage.css
@@ -61,11 +61,12 @@
   white-space: nowrap;
 }
 
-.searchAttributes {
+.searchFilters {
   margin-bottom: 16px;
 
   @media (--viewportLarge) {
-    margin-bottom: 24px;
+    margin-top: 2px;
+    margin-bottom: 22px;
   }
 }
 
